find kernel scheduler

--- a/configs/tested-cfgs/SM75_RTX2060/gpgpusim.config
+++ b/configs/tested-cfgs/SM75_RTX2060/gpgpusim.config
@@ -1,6 +1,7 @@
 # functional simulator specification
 -gpgpu_ptx_instruction_classification 0
--gpgpu_ptx_sim_mode 0
+-gpgpu_ptx_sim_mode 1 
+#-gpgpu_ptx_sim_mode 0
 -gpgpu_ptx_force_max_capability 75
 
 # Device Limits
@@ -16,10 +17,11 @@
 -gpgpu_compute_capability_minor 5
 
 # PTX execution-driven
--gpgpu_ptx_convert_to_ptxplus 0
--gpgpu_ptx_save_converted_ptxplus 0
+-gpgpu_ptx_convert_to_ptxplus 1
+-gpgpu_ptx_save_converted_ptxplus 1
 
 # high level architecture configuration
+#! can modified into one cluster, thus using only 1 core!
 -gpgpu_n_clusters 30
 -gpgpu_n_cores_per_cluster 1
 -gpgpu_n_mem 12
@@ -38,6 +40,7 @@
 -gpgpu_shader_cta 16
 -gpgpu_simd_model 1
 
+#! Adjust number of sp(cuda core) and tensor_core  
 # Pipeline widths and number of FUs
 # ID_OC_SP,ID_OC_DP,ID_OC_INT,ID_OC_SFU,ID_OC_MEM,OC_EX_SP,OC_EX_DP,OC_EX_INT,OC_EX_SFU,OC_EX_MEM,EX_WB,ID_OC_TENSOR_CORE,OC_EX_TENSOR_CORE
 -gpgpu_pipeline_widths 4,4,4,4,4,4,4,4,4,4,8,4,4
