--- a/CUDAsample/gpgpusim.config
+++ b/CUDAsample/gpgpusim.config
@@ -23,7 +23,9 @@
 #! can modified into one cluster, thus using only 1 core!
 -gpgpu_n_clusters 1
 #-gpgpu_n_clusters 30
--gpgpu_n_cores_per_cluster 1
+#-gpgpu_n_cores_per_cluster 1
+#SM = SIMT Core
+-gpgpu_n_cores_per_cluster 4
 -gpgpu_n_mem 12
 -gpgpu_n_sub_partition_per_mchannel 2
 
@@ -46,6 +48,8 @@
 #-gpgpu_shader_core_pipeline 64:32
 # 1 warp
 #-gpgpu_shader_core_pipeline 32:32
+
+#!max_cta_per_core, Maximum number of concurrent CTAs in shader
 -gpgpu_shader_cta 16
 -gpgpu_simd_model 1
 
@@ -94,8 +98,8 @@
 -gpgpu_reg_file_port_throughput 2
 
 #! warp scheduling
--gpgpu_num_sched_per_core 4
-#-gpgpu_num_sched_per_core 1
+#-gpgpu_num_sched_per_core 4
+-gpgpu_num_sched_per_core 1
 
 -gpgpu_scheduler lrr
 # a warp scheduler issue mode
@@ -204,3 +208,4 @@
 
 #gpgpu_concurrent_kernel_sm
 -gpgpu_concurrent_kernel_sm 1
+
