--- a/CUDAsample/gpgpusim.config
+++ b/CUDAsample/gpgpusim.config
@@ -38,9 +38,11 @@
 -gpgpu_occupancy_sm_number 75
 #!<# thread/shader core>:<warp size>:<pipeline SIMD width>
 # 32 warp
--gpgpu_shader_core_pipeline 1024:32
+#-gpgpu_shader_core_pipeline 1024:32
+# 16 warp
+#-gpgpu_shader_core_pipeline 512:32
 # 8 warp
-#-gpgpu_shader_core_pipeline 256:32
+-gpgpu_shader_core_pipeline 256:32
 # 4 warp
 #-gpgpu_shader_core_pipeline 128:32
 # 2 warp
@@ -57,16 +59,16 @@
 # ID_OC_SP,ID_OC_DP,ID_OC_INT,ID_OC_SFU,ID_OC_MEM,OC_EX_SP,OC_EX_DP,OC_EX_INT,OC_EX_SFU,OC_EX_MEM,EX_WB,ID_OC_TENSOR_CORE,OC_EX_TENSOR_CORE
 #-gpgpu_pipeline_widths 4,4,4,4,4,4,4,4,4,4,8,4,4
 -gpgpu_pipeline_widths 1,1,1,1,1,1,1,1,1,1,1,1,1
-#-gpgpu_num_sp_units 1
--gpgpu_num_sp_units 4
+-gpgpu_num_sp_units 1
+#-gpgpu_num_sp_units 4
 -gpgpu_num_sfu_units 4
 -gpgpu_num_dp_units 4
 
 #-gpgpu_num_int_units 1
 -gpgpu_num_int_units 4
 -gpgpu_tensor_core_avail 1
-#-gpgpu_num_tensor_core_units 1
--gpgpu_num_tensor_core_units 4
+-gpgpu_num_tensor_core_units 1
+#-gpgpu_num_tensor_core_units 4
 
 # Instruction latencies and initiation intervals
 # "ADD,MAX,MUL,MAD,DIV"
