[ADD] memory print

--- a/CUDAsample/gpgpusim.config
+++ b/CUDAsample/gpgpusim.config
@@ -1,5 +1,5 @@
 # functional simulator specification
--gpgpu_ptx_instruction_classification 0
+-gpgpu_ptx_instruction_classification 1
 -gpgpu_ptx_sim_mode 0
 -gpgpu_ptx_force_max_capability 75
 
@@ -40,11 +40,11 @@
 # 32 warp
 #-gpgpu_shader_core_pipeline 1024:32
 # 16 warp
--gpgpu_shader_core_pipeline 512:32
+#-gpgpu_shader_core_pipeline 512:32
 # 8 warp
 #-gpgpu_shader_core_pipeline 256:32
 # 4 warp
-#-gpgpu_shader_core_pipeline 128:32
+-gpgpu_shader_core_pipeline 128:32
 # 2 warp
 #-gpgpu_shader_core_pipeline 64:32
 # 1 warp
@@ -59,13 +59,12 @@
 # ID_OC_SP,ID_OC_DP,ID_OC_INT,ID_OC_SFU,ID_OC_MEM,OC_EX_SP,OC_EX_DP,OC_EX_INT,OC_EX_SFU,OC_EX_MEM,EX_WB,ID_OC_TENSOR_CORE,OC_EX_TENSOR_CORE
 #-gpgpu_pipeline_widths 4,4,4,4,4,4,4,4,4,4,8,4,4
 -gpgpu_pipeline_widths 1,1,1,1,1,1,1,1,1,1,1,1,1
--gpgpu_num_sp_units 32
+-gpgpu_num_sp_units 1
 #-gpgpu_num_sp_units 4
--gpgpu_num_sfu_units 8
--gpgpu_num_dp_units 16
+-gpgpu_num_sfu_units 1
+-gpgpu_num_dp_units 1
 
-#-gpgpu_num_int_units 1
--gpgpu_num_int_units 32
+-gpgpu_num_int_units 1
 -gpgpu_tensor_core_avail 1
 -gpgpu_num_tensor_core_units 1
 #-gpgpu_num_tensor_core_units 4
@@ -87,8 +86,8 @@
 #! sub core model: in which each scheduler has its own register file and EUs
 # i.e. schedulers are isolated
 #! each scheduler should has its own issue register
-#-gpgpu_sub_core_model 1
--gpgpu_sub_core_model 0
+-gpgpu_sub_core_model 1
+#-gpgpu_sub_core_model 0
 # disable specialized operand collectors and use generic operand collectors instead
 -gpgpu_enable_specialized_operand_collector 0
 -gpgpu_operand_collector_num_units_gen 8
@@ -102,7 +101,9 @@
 #-gpgpu_num_sched_per_core 4
 -gpgpu_num_sched_per_core 1
 
--gpgpu_scheduler lrr
+# gto,tl
+#-gpgpu_scheduler two_level_active:4:0:1
+-gpgpu_scheduler old
 # a warp scheduler issue mode
 #-gpgpu_max_insn_issue_per_warp 2
 -gpgpu_max_insn_issue_per_warp 1
@@ -190,6 +191,9 @@
 #-dram_seperate_write_queue_enable 1
 #-dram_write_queue_size 64:56:32
 
+# Using cuobjdump to extract ptx/SASS
+-gpgpu_ptx_use_cuobjdump 1
+
 # stat collection
 -gpgpu_memlatency_stat 14 
 -gpgpu_runtime_stat 500
@@ -208,5 +212,5 @@
 
 
 #gpgpu_concurrent_kernel_sm
--gpgpu_concurrent_kernel_sm 1
+-gpgpu_concurrent_kernel_sm 0
 
